Fixed a very slight amount of the active nav tag bleeding outside the border radius

--- a/UI/Web/src/theme/components/_navbar.scss
+++ b/UI/Web/src/theme/components/_navbar.scss
@@ -8,3 +8,7 @@
 i.fa.nav {
     color: var(--navbar-fa-icon-color);
 }
+
+.nav-tabs .nav-link.active::before {
+  transform: scaleY(0);
+}
